--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,8 +2,8 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN yarn install
+RUN npm install
 
 COPY . .
 
-CMD ["yarn", "start"]
+CMD ["npm", "start"]
