--- a/auth/package.json
+++ b/auth/package.json
@@ -4,10 +4,14 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cookie-session": "2.0.39",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
