--- a/auth/package.json
+++ b/auth/package.json
@@ -7,6 +7,7 @@
     "@types/cookie-session": "2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.32",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -17,9 +18,15 @@
     "typescript": "^3.9.5"
   },
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.7.31"
+    "@types/jest": "^26.0.4",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.1.0",
+    "mongodb-memory-server": "^6.6.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.3"
   }
 }
