adds ticketing service

--- a/infra/k8s/tickets-mongo-depl.yaml
+++ b/infra/k8s/tickets-mongo-depl.yaml
@@ -2,39 +2,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:                       # Deployment name
-  name: auth-depl
+  name: tickets-mongo-depl
 spec:
   replicas: 1                   # Copies of the image to run
   selector:                     # Setup selector to tell deployment how to find all of the pods it will create
     matchLabels:
-      app: auth
+      app: tickets-mongo
   template:                     # How to create each individual pod
     metadata:
       labels:
-        app: auth
+        app: tickets-mongo
     spec:                       # Container specifications (How the pod behaves)
       containers:
-        - name: auth            # Container name (for logging purposes)
-          image: zjayers/auth   # Container Image
-          env:
-            - name: JWT_SECRET  # Setup JWT Secret in k8 cluster
-              valueFrom:
-                secretKeyRef:
-                  name: jwt-secret
-                  key: JWT_KEY
-            - name: MONGO_URI
-              value: 'mongodb://auth-mongo-srv:27017/auth'
+        - name: tickets-mongo      # Container name (for logging purposes)
+          image: mongo          # Container Image
 ---
 # ------------------------------ Service ------------------------------ #
 apiVersion: v1
 kind: Service                   # Default: ClusterIP Service (Only allow access from inside cluster)
 metadata:                       # Service name
-  name: auth-srv
+  name: tickets-mongo-srv
 spec:                           # No type is defined, the service will default to ClusterIP service
   selector:                     # Setup selector to define the deployment to attach the service to
-    app: auth
+    app: tickets-mongo
   ports:                        # Setup exposed ports for this pod
-    - name: auth
+    - name: tickets-mongo
       protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 27017
+      targetPort: 27017
