--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,4 +23,12 @@ build:
       sync: # Setup sync (rebuild) options
         manual:
           - src: '**/*.js'      # Sync all javascript files inside of the client/src directory
-            dest: .             # Where to sync the files to inside of the running container
+            dest: .  
+    - image: zjayers/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:                     # Setup sync (rebuild) options
+        manual:
+          - src: 'src/**/*.ts'  # Sync all typescript files inside of the auth/src directory
+            dest: .             # Where to sync the files to inside of the running container           # Where to sync the files to inside of the running container
