--- a/service.payments/package.json
+++ b/service.payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "payments",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -17,14 +17,19 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "mongoose-update-if-current": "^1.4.0",
+    "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.121.0"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.37",
+    "@types/stripe": "^7.13.25",
     "@types/supertest": "^2.0.10",
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.2",
     "supertest": "^6.0.1",
