--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test:auth": "cd service.auth && jest --verbose",
     "test:tickets": "cd service.tickets && jest --verbose",
     "test:orders": "cd service.orders && jest --verbose",
-    "test:expiration": "cd service.expiration && jest --verbose",
     "test:payments": "cd service.payments && jest --verbose",
     "sync": "run-p update:*",
     "test": "npm-run-all test:*"
@@ -31,5 +30,6 @@
   "homepage": "https://github.com/zjayers/microservice.showcase#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "dependencies": {}
 }
