adds git action workflows

--- a/.github/workflows/tests-tickets.yml
+++ b/.github/workflows/tests-tickets.yml
@@ -1,11 +1,12 @@
-name: Tests
+name: tests-tickets
 
 on:
   pull_request:
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd auth && npm install && npm run test:ci
+      - run: cd service.tickets && npm install && npm run test:ci
+
