--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -9,4 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd service.payments && npm install && npm run test:ci
+        env: # Or as an environment variable
+          super_secret: ${{ secrets.STRIPE_SECRET }}
 
