adds descriptions in package.json files

--- a/service.orders/package.json
+++ b/service.orders/package.json
@@ -1,7 +1,7 @@
 {
   "name": "orders",
   "version": "1.0.0",
-  "description": "",
+  "description": "Orders Service",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
