--- a/service.auth/package.json
+++ b/service.auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auth",
   "version": "1.0.0",
-  "description": "Auth Service",
+  "description": "auth service",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
