--- a/service.tickets/package.json
+++ b/service.tickets/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tickets",
   "version": "1.0.0",
-  "description": "Tickets Service",
+  "description": "tickets service",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
