--- a/infrastructure/k8s-prod/ingress-srv.yaml
+++ b/infrastructure/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: micro.dev
+    - host: www.ayers-app-microservices.xyz
       http:
         paths:
           - path: /api/users/?(.*)
